--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
   <p>Click to add to cart. DM or send payment to complete your order.</p>
   <div class="flex-pair">
     <div>
-      <p><strong>Reflex Sight – $50</strong></p>
-      <img src="reflex1.jpg" class="clean-pic" />
-      <a href="#" class="button" onclick="addToCart('Reflex Sight - $50')">Add to Cart</a>
+      <p><strong>Feyachi Reflex Sight – $50</strong></p>
+      <img src="9C299771-C58B-4CF4-8CAD-5CC589E23D44.jpeg" class="clean-pic" />
+      <a href="#" class="button" onclick="addToCart('Feyachi Reflex Sight - $50')">Add to Cart</a>
     </div>
     <div>
-      <p><strong>Beam Flashlight – $25</strong></p>
-      <img src="beam1.jpg" class="clean-pic" />
-      <a href="#" class="button" onclick="addToCart('Beam Flashlight - $25')">Add to Cart</a>
+      <p><strong>MCCC Tactical Flashlight – $25</strong></p>
+      <img src="6E35AF60-C171-43E6-91EE-8B69361E4457.jpeg" class="clean-pic" />
+      <a href="#" class="button" onclick="addToCart('MCCC Tactical Flashlight - $25')">Add to Cart</a>
     </div>
   </div>
   <a href="#" class="button" onclick="showCart()">View Cart</a>
