--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <ul>
     <li>Cash App: <strong>$Tony2slaze</strong></li>
     <li>Zelle: <strong>tono89877@gmail.com</strong></li>
-    <li>Apple Pay: <strong>(Phone # Coming Soon)</strong></li>
+    <li>Apple Pay: <strong>(424)-415-4393</strong></li>
   </ul>
 </section>
 
@@ -181,6 +181,21 @@
   <h2>📦 Shoe Cleaning Shipping Address</h2>
   <p><strong>132 E 163rd St<br>Gardena, CA 90248</strong></p>
   <p>Include your name, IG handle, and return address inside the box.</p>
+</section>
+
+<section>
+  <h2>🔁 Refund & Return Policy</h2>
+  <p>At TNY Supply, all sales are final. However, we do accept returns or exchanges under the following conditions:</p>
+  <ul>
+    <li>The item arrived damaged or the wrong product was sent</li>
+    <li>You must contact us within 3 days of receiving your order</li>
+    <li>Item must be unused and in original condition</li>
+    <li>Buyer is responsible for return shipping</li>
+    <li>Refunds are issued once the item is returned and inspected</li>
+  </ul>
+  <p><strong>⛔ No refunds</strong> for used, installed, or modified airsoft attachments.</p>
+  <p><strong>⛔ No returns</strong> on custom shoe cleaning services.</p>
+  <p>Questions? DM me on Instagram <a href="https://instagram.com/tny_supply" target="_blank">@tny_supply</a> or email <a href="mailto:tonymogon78@gmail.com">tonymogon78@gmail.com</a></p>
 </section>
 
 <footer>
