--- a/index.html
+++ b/index.html
@@ -184,6 +184,19 @@
 </section>
 
 <section>
+  <h2>⭐ Customer Reviews</h2>
+  <div style="background:#fff; padding:15px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); margin-bottom: 20px;">
+    <p><strong>@sneakerboss99</strong> — “Got my Jordans cleaned and they came back fresh af 🔥”</p>
+  </div>
+  <div style="background:#fff; padding:15px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); margin-bottom: 20px;">
+    <p><strong>@bbguns_only</strong> — “Ordered the sight and flashlight — shipping was fast and gear was clean 💯”</p>
+  </div>
+  <div style="background:#fff; padding:15px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+    <p><strong>@freshfitztoday</strong> — “Customer service was solid and everything I ordered looked exactly like the pics.”</p>
+  </div>
+</section>
+
+<section>
   <h2>🔁 Refund & Return Policy</h2>
   <p>At TNY Supply, all sales are final. However, we do accept returns or exchanges under the following conditions:</p>
   <ul>
