--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
       display: none;
       margin-top: 30px;
     }
+    .review-box {
+      background: #fff;
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 15px;
+    }
   </style>
 </head>
 <body>
@@ -184,19 +191,6 @@
 </section>
 
 <section>
-  <h2>⭐ Customer Reviews</h2>
-  <div style="background:#fff; padding:15px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); margin-bottom: 20px;">
-    <p><strong>@sneakerboss99</strong> — “Got my Jordans cleaned and they came back fresh af 🔥”</p>
-  </div>
-  <div style="background:#fff; padding:15px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); margin-bottom: 20px;">
-    <p><strong>@bbguns_only</strong> — “Ordered the sight and flashlight — shipping was fast and gear was clean 💯”</p>
-  </div>
-  <div style="background:#fff; padding:15px; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
-    <p><strong>@freshfitztoday</strong> — “Customer service was solid and everything I ordered looked exactly like the pics.”</p>
-  </div>
-</section>
-
-<section>
   <h2>🔁 Refund & Return Policy</h2>
   <p>At TNY Supply, all sales are final. However, we do accept returns or exchanges under the following conditions:</p>
   <ul>
@@ -209,6 +203,33 @@
   <p><strong>⛔ No refunds</strong> for used, installed, or modified airsoft attachments.</p>
   <p><strong>⛔ No returns</strong> on custom shoe cleaning services.</p>
   <p>Questions? DM me on Instagram <a href="https://instagram.com/tny_supply" target="_blank">@tny_supply</a> or email <a href="mailto:tonymogon78@gmail.com">tonymogon78@gmail.com</a></p>
+</section>
+
+<section>
+  <h2>⭐ Leave a Review</h2>
+  <p>Got your order? Let us know how we did!</p>
+  <form action="https://formsubmit.co/tonymogon78@gmail.com" method="POST">
+    <input type="hidden" name="_next" value="https://tonyoz4.github.io/tnysupply.github.io">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_subject" value="New Customer Review">
+    <input type="hidden" name="_template" value="table">
+    <input type="text" name="name" placeholder="Your Name (optional)"><br><br>
+    <input type="text" name="product" placeholder="What did you order?"><br><br>
+    <textarea name="review" placeholder="Write your review here..." rows="4" required></textarea><br><br>
+    <input type="submit" value="Submit Review" class="button">
+  </form>
+</section>
+
+<section>
+  <h2>💬 What Customers Are Saying</h2>
+  <div class="review-box">
+    <p><strong>“Super fast shipping and clean service 🔥 will order again”</strong></p>
+    <p>– @jsnipez</p>
+  </div>
+  <div class="review-box">
+    <p><strong>“Reflex sight came just like the pic, everything was good 👍🏾”</strong></p>
+    <p>– Verified Buyer</p>
+  </div>
 </section>
 
 <footer>
