--- a/index.html
+++ b/index.html
@@ -117,6 +117,34 @@
 </section>
 
 <section>
+  <h2>💰 Shoe Cleaning Prices</h2>
+  <ul>
+    <li>Standard Clean: <strong>$15</strong> – Basic cleaning for everyday sneakers.</li>
+    <li>Deep Clean: <strong>$25</strong> – Includes midsole, upper, laces, and more.</li>
+    <li>Suede / Delicate Material: <strong>$30</strong> – Special care and products.</li>
+    <li>Same Day Rush: <strong>+ $10</strong> – Add this if you need it done today.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>📲 Book a Shoe Cleaning</h2>
+  <p>Use the form below to request a cleaning. I’ll contact you to confirm details and payment.</p>
+  <form action="https://formsubmit.co/tonymogon78@gmail.com" method="POST">
+    <input type="hidden" name="_next" value="https://tonyoz4.github.io/tnysupply.github.io">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_subject" value="New Shoe Cleaning Booking">
+    <input type="hidden" name="_template" value="table">
+    <input type="text" name="name" placeholder="Your Name" required><br><br>
+    <input type="text" name="instagram" placeholder="Instagram Handle"><br><br>
+    <textarea name="shoes" placeholder="What shoes are you sending?" rows="3"></textarea><br><br>
+    <textarea name="requests" placeholder="Any special requests?" rows="2"></textarea><br><br>
+    <textarea name="address" placeholder="Return Address" rows="3"></textarea><br><br>
+    <input type="email" name="email" placeholder="Your Email" required><br><br>
+    <input type="submit" value="Book My Cleaning" class="button">
+  </form>
+</section>
+
+<section>
   <h2>🎯 Airsoft Attachments (Shipping Available)</h2>
   <p>Click to add to cart. DM or send payment to complete your order.</p>
   <div class="flex-pair">
@@ -144,24 +172,6 @@
     <p>Then DM me on Instagram with what you ordered + screenshot of payment:</p>
     <a href="https://instagram.com/tny_supply" class="button" target="_blank">DM @tny_supply</a>
   </div>
-</section>
-
-<section>
-  <h2>📲 Book a Shoe Cleaning</h2>
-  <p>Use the form below to request a cleaning. I’ll contact you to confirm details and payment.</p>
-  <form action="https://formsubmit.co/tonymogon78@gmail.com" method="POST">
-    <input type="hidden" name="_next" value="https://tonyoz4.github.io/tnysupply.github.io">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_subject" value="New Shoe Cleaning Booking">
-    <input type="hidden" name="_template" value="table">
-    <input type="text" name="name" placeholder="Your Name" required><br><br>
-    <input type="text" name="instagram" placeholder="Instagram Handle"><br><br>
-    <textarea name="shoes" placeholder="What shoes are you sending?" rows="3"></textarea><br><br>
-    <textarea name="requests" placeholder="Any special requests?" rows="2"></textarea><br><br>
-    <textarea name="address" placeholder="Return Address" rows="3"></textarea><br><br>
-    <input type="email" name="email" placeholder="Your Email" required><br><br>
-    <input type="submit" value="Book My Cleaning" class="button">
-  </form>
 </section>
 
 <section>
