--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
   </ul>
 </section>
 
+<section id="turnaround" style="background-color:#f7f7f7; padding:20px; margin-top:20px; border-left:4px solid #800080;">
+  <h2>⏱️ Time Info & Custom Work</h2>
+  <p>Basic and deep cleans usually take <strong>3–4 days</strong>, so expect that unless I say different.</p>
+  <p>If you want extras like <strong>repainting, icing, or anything custom</strong>, let me know <strong>exactly</strong> what you need when you book. I’ll let you know how long it’ll take depending on the shoes — stuff like that might take <strong>more than 4 days</strong>. Just be real with what you want and I got you.</p>
+</section>
+
 <section>
   <h2>📲 Book a Shoe Cleaning</h2>
   <p>Use the form below to request a cleaning. I’ll contact you to confirm details and payment.</p>
